--- a/marker/marker.css
+++ b/marker/marker.css
@@ -74,6 +74,8 @@ span {
   transform: scale(1.4);
 }
 textarea {
+  width: 100%;
+  height: 200px;
   border-radius: 4px;
   color: black;
   padding: 20px;
